--- a/compare_tools_human.ipynb
+++ b/compare_tools_human.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished reading into pyranges object in time 64.55301427841187\n"
+      "Finished reading into pyranges object in time 64.6853404045105\n"
      ]
     }
    ],
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished converting gtf to sql db in time 449.48835945129395\n"
+      "Finished converting gtf to sql db in time 460.73711919784546\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted Pyranges object to in-memory sql db in time 49.05035901069641\n"
+      "Converted Pyranges object to in-memory sql db in time 50.461308002471924\n"
      ]
     }
    ],
@@ -89,8 +89,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Aggregate Queries: Counting transcripts, calculating exon lengths, and grouping features\n",
+    "### Aggregate Query 1: Count the number of exons for each gene"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +110,6 @@
     }
    ],
    "source": [
-    "# Aggregate Queries: Counting transcripts, calculating exon lengths, and grouping features\n",
-    "### Aggregate Query 1: Count the number of exons for each gene\n",
     "# Using pyranges\n",
     "%timeit exon_counts_pr = (human_gr[human_gr.Feature == \"exon\"].df.groupby(\"gene_id\").size().reset_index(name=\"exon_count\"))"
    ]
@@ -154,8 +160,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregate Query 2: Calculate the total length of exons for each gene"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +180,6 @@
     }
    ],
    "source": [
-    "### Aggregate Query 2: Calculate the total length of exons for each gene\n",
     "# Using pyranges\n",
     "%timeit exon_lengths_pr = (human_gr[human_gr.Feature == \"exon\"].df.assign(length=lambda df: df[\"End\"] - df[\"Start\"]).groupby(\"gene_id\")[\"length\"].sum().reset_index(name=\"total_exon_length\"))"
    ]
@@ -220,8 +232,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregate Query 3: Identify the chromosome with the highest number of transcripts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +252,6 @@
     }
    ],
    "source": [
-    "### Aggregate Query 3: Identify the chromosome with the highest number of transcripts\n",
     "# Using pyranges\n",
     "%timeit transcript_counts_pr = human_gr[human_gr.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()"
    ]
@@ -288,7 +306,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interval Arithmetic"
+    "# Interval Arithmetic\n",
+    "### Query 1: Merging Overlapping Exon Intervals"
    ]
   },
   {
@@ -305,7 +324,6 @@
     }
    ],
    "source": [
-    "# Query 1: Merging Overlapping Exon Intervals\n",
     "# Combine all overlapping exon intervals into contiguous regions\n",
     "# Using pyranges\n",
     "%timeit exon_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=False)"
@@ -350,6 +368,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query 2: Finding Overlaps with a Specific Interval\n",
+    "Find all gene features that overlap a given interval chr1:100000-200000"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -363,8 +389,6 @@
     }
    ],
    "source": [
-    "# Query 2: Finding Overlaps with a Specific Interval\n",
-    "# Find all gene features that overlap a given interval chr1:100000-200000\n",
     "# Using pyranges\n",
     "%timeit overlapping_genes_pr = human_gr[human_gr.Feature == \"gene\"].overlap(pr.from_dict({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}), strand=False)"
    ]
@@ -418,8 +442,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query 3: Subtracting Intervals\n",
+    "Remove a set of repetitive regions from the exon features.\n",
+    "\n",
+    "chr1:15M-16M,20M-21M"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +465,6 @@
     }
    ],
    "source": [
-    "# Query 3: Subtracting Intervals\n",
-    "# Remove a set of repetitive regions from the exon features.\n",
     "# Using pyranges\n",
     "%timeit subtracted_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=False).subtract(pr.from_dict({\"Chromosome\": [\"1\", \"1\"],\"Start\": [15000000, 20000000],\"End\": [16000000, 21000000],}))"
    ]
