Enhance Jupyter notebook with performance benchmarks for GTF processing and SQLite integration

--- a/compare_load.ipynb
+++ b/compare_load.ipynb
@@ -13,7 +13,39 @@
     "import gffutils\n",
     "import time\n",
     "import pybedtools\n",
-    "import gtf_to_df"
+    "import gtf_to_df\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading GTF into pandas dataframe using pyranges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1min 48s ± 4.59 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit human_df = pr.read_gtf(\"Homo_sapiens.GRCh38.112.chr.gtf\",as_df=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading GTF into pandas dataframe using custom python function"
    ]
   },
   {
@@ -22,16 +54,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "human_df = pr.read_gtf(\"Homo_sapiens.GRCh38.112.chr.gtf\",as_df=True) # 113s"
+    "%timeit human_df2 = gtf_to_df.dataframe(\"Homo_sapiens.GRCh38.112.chr.gtf\") # 341s"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "human_df2 = gtf_to_df.dataframe(\"Homo_sapiens.GRCh38.112.chr.gtf\") # 341s"
+    "### Converting pandas dataframe to in-memory SQLite database"
    ]
   },
   {
@@ -43,18 +73,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted Pyranges object to in-memory sql db in time 73.34100031852722\n"
+      "47.5 s ± 3.56 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
+    "human_df = pr.read_gtf(\"Homo_sapiens.GRCh38.112.chr.gtf\",as_df=True)\n",
     "conn = sqlite3.connect(\":memory:\")\n",
-    "# conn = sqlite3.connect(\"db.sqlite3\")\n",
-    "start_time = time.time()\n",
-    "human_df.to_sql(\"human\", conn, if_exists=\"replace\")\n",
-    "end_time = time.time()\n",
-    "print(f\"Converted Pyranges object to in-memory sql db in time {end_time-start_time}\")\n",
+    "%timeit human_df.to_sql(\"human\", conn, if_exists=\"replace\", index=False)\n",
     "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### C++ code for reading GTF into in-memory SQLite database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59.8 s ± 2.09 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.system(\"g++ gtf_to_sql.cpp -lsqlite3\")\n",
+    "%timeit os.system(\"./a.out\")"
    ]
   },
   {
@@ -119,6 +171,13 @@
     "loldf.set_index(human_df4.index, inplace=True)\n",
     "human_df4 = pd.concat([human_df4, loldf], axis=1, sort=False) # 100s"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
