Update GTF processing logic and improve benchmarking procedure

--- a/compare_load.ipynb
+++ b/compare_load.ipynb
@@ -93,20 +93,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "59.8 s ± 2.09 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "os.system(\"g++ gtf_to_sql.cpp -lsqlite3\")\n",
-    "%timeit os.system(\"./a.out\")"
+    "os.system(\"./a.out\")\n",
+    "# %timeit os.system(\"./a.out\")"
    ]
   },
   {
