--- a/compare_tools_human.ipynb
+++ b/compare_tools_human.ipynb
@@ -2,36 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyranges as pr\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
     "import sqlite3\n",
     "import gffutils\n",
     "import time\n",
-    "import pybedtools"
+    "import pybedtools\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gtf_file_name = \"Homo_sapiens.GRCh38.112.chr.gtf\"\n",
+    "# gtf_file_name = \"/home/U210050044/data/DH607-project/\"\n",
+    "sql_db_name = \"db.sqlite3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished reading into pyranges object in time 64.6853404045105\n"
+      "Finished reading into pyranges object in time 136.18221592903137\n"
      ]
     }
    ],
    "source": [
     "start_time = time.time()\n",
-    "human_gr = pr.read_gtf(\"/home/U210050044/data/DH607-project/Homo_sapiens.GRCh38.112.chr.gtf\")\n",
+    "human_gr = pr.read_gtf(gtf_file_name)\n",
     "end_time = time.time()\n",
     "print(f\"Finished reading into pyranges object in time {end_time-start_time}\")"
    ]
@@ -50,10 +61,10 @@
     }
    ],
    "source": [
-    "start_time = time.time()\n",
-    "human_db = gffutils.create_db(\"/home/U210050044/data/DH607-project/Homo_sapiens.GRCh38.112.chr.gtf\",\"/home/U210050044/data/DH607-project/human_db.sqlite3\",disable_infer_genes=True,disable_infer_transcripts=True, force=True)\n",
-    "end_time = time.time()\n",
-    "print(f\"Finished converting gtf to sql db in time {end_time-start_time}\")"
+    "# start_time = time.time()\n",
+    "# human_db = gffutils.create_db(\"/home/U210050044/data/DH607-project/Homo_sapiens.GRCh38.112.chr.gtf\",\"/home/U210050044/data/DH607-project/human_db.sqlite3\",disable_infer_genes=True,disable_infer_transcripts=True, force=True)\n",
+    "# end_time = time.time()\n",
+    "# print(f\"Finished converting gtf to sql db in time {end_time-start_time}\")"
    ]
   },
   {
@@ -62,8 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open the database\n",
-    "human_db = gffutils.FeatureDB(\"/home/U210050044/data/DH607-project/human_db.sqlite3\")"
+    "# # Open the database\n",
+    "# human_db = gffutils.FeatureDB(\"/home/U210050044/data/DH607-project/human_db.sqlite3\")"
    ]
   },
   {
@@ -80,11 +91,20 @@
     }
    ],
    "source": [
-    "conn = sqlite3.connect(\":memory:\")\n",
+    "os.system(\"g++ gtf_to_sql.cpp -lsqlite3\")\n",
     "start_time = time.time()\n",
-    "human_gr.df.to_sql(\"human\", conn, if_exists=\"replace\")\n",
+    "os.system(f\"./a.out {sql_db_name} {gtf_file_name}\")\n",
     "end_time = time.time()\n",
-    "print(f\"Converted Pyranges object to in-memory sql db in time {end_time-start_time}\")\n",
+    "print(f\"Finished reading into sql file in time {end_time-start_time}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect(sql_db_name)\n",
     "cur = conn.cursor()"
    ]
   },
@@ -128,35 +148,60 @@
     }
    ],
    "source": [
-    "# Using gffutils\n",
-    "def exon_counts_gffutls():\n",
-    "    # Iterate over all genes and count their exons\n",
-    "    exon_counts = {}\n",
-    "    for gene in human_db.features_of_type(\"gene\"):\n",
-    "        # Efficiently count exons for each gene using the `children` method\n",
-    "        exon_counts[gene.id] = sum(\n",
-    "            1 for _ in human_db.children(gene, featuretype=\"exon\")\n",
-    "    )\n",
-    "    return exon_counts\n",
-    "%timeit exon_counts_gff = exon_counts_gffutls()"
+    "# # Using gffutils\n",
+    "# def exon_counts_gffutls():\n",
+    "#     # Iterate over all genes and count their exons\n",
+    "#     exon_counts = {}\n",
+    "#     for gene in human_db.features_of_type(\"gene\"):\n",
+    "#         # Efficiently count exons for each gene using the `children` method\n",
+    "#         exon_counts[gene.id] = sum(\n",
+    "#             1 for _ in human_db.children(gene, featuretype=\"exon\")\n",
+    "#     )\n",
+    "#     return exon_counts\n",
+    "# %timeit exon_counts_gff = exon_counts_gffutls()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4 s ± 21 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.59 s ± 368 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "# Using sql\n",
     "%timeit exon_counts_sql = pd.read_sql_query(\"SELECT gene_id, COUNT(*) as exon_count FROM human WHERE Feature = 'exon' GROUP BY gene_id\", conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if exon_counts_pr and exon_counts_sql are identical\n",
+    "exon_counts_pr = (human_gr[human_gr.Feature == \"exon\"].df.groupby(\"gene_id\").size().reset_index(name=\"exon_count\"))\n",
+    "exon_counts_sql = pd.read_sql_query(\"SELECT gene_id, COUNT(*) as exon_count FROM human WHERE Feature = 'exon' GROUP BY gene_id\", conn)\n",
+    "exon_counts_sql[\"exon_count\"] = exon_counts_sql[\"exon_count\"].astype(int)\n",
+    "exon_counts_pr[\"exon_count\"] = exon_counts_pr[\"exon_count\"].astype(int)\n",
+    "exon_counts_sql.equals(exon_counts_pr)"
    ]
   },
   {
@@ -198,19 +243,19 @@
     }
    ],
    "source": [
-    "# Using gffutils\n",
-    "def exon_lengths_gffutls():\n",
-    "    # Dictionary to store total exon length per gene\n",
-    "    exon_lengths = {}\n",
-    "    # Iterate over all genes and calculate total exon length\n",
-    "    for gene in human_db.features_of_type(\"gene\"):\n",
-    "        # Compute total exon length for each gene\n",
-    "        exon_lengths[gene.id] = sum(\n",
-    "            (child.end - child.start + 1)\n",
-    "            for child in human_db.children(gene, featuretype=\"exon\")\n",
-    "        )\n",
-    "    return exon_lengths\n",
-    "%timeit exon_lengths_gff = exon_lengths_gffutls()"
+    "# # Using gffutils\n",
+    "# def exon_lengths_gffutls():\n",
+    "#     # Dictionary to store total exon length per gene\n",
+    "#     exon_lengths = {}\n",
+    "#     # Iterate over all genes and calculate total exon length\n",
+    "#     for gene in human_db.features_of_type(\"gene\"):\n",
+    "#         # Compute total exon length for each gene\n",
+    "#         exon_lengths[gene.id] = sum(\n",
+    "#             (child.end - child.start + 1)\n",
+    "#             for child in human_db.children(gene, featuretype=\"exon\")\n",
+    "#         )\n",
+    "#     return exon_lengths\n",
+    "# %timeit exon_lengths_gff = exon_lengths_gffutls()"
    ]
   },
   {
@@ -229,6 +274,31 @@
    "source": [
     "# using sql\n",
     "%timeit exon_lengths_sql = pd.read_sql_query(\"SELECT gene_id, SUM(End - Start) as total_exon_length FROM human WHERE Feature = 'exon' GROUP BY gene_id\", conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if exon_lengths_pr and exon_lengths_sql are identical\n",
+    "exon_lengths_pr = (human_gr[human_gr.Feature == \"exon\"].df.assign(length=lambda df: df[\"End\"] - df[\"Start\"]).groupby(\"gene_id\")[\"length\"].sum().reset_index(name=\"total_exon_length\"))\n",
+    "exon_lengths_sql = pd.read_sql_query(\"SELECT gene_id, SUM(End - Start) as total_exon_length FROM human WHERE Feature = 'exon' GROUP BY gene_id\", conn)\n",
+    "exon_lengths_sql[\"total_exon_length\"] = exon_lengths_sql[\"total_exon_length\"].astype(int)\n",
+    "exon_lengths_pr[\"total_exon_length\"] = exon_lengths_pr[\"total_exon_length\"].astype(int)\n",
+    "exon_lengths_sql.equals(exon_lengths_pr)"
    ]
   },
   {
@@ -270,18 +340,18 @@
     }
    ],
    "source": [
-    "# Using gffutils\n",
-    "def transcript_counts_gffutls():\n",
-    "    # Dictionary to store the number of transcripts per chromosome\n",
-    "    transcript_counts = {}\n",
-    "    # Iterate over all transcripts and count the number of transcripts per chromosome\n",
-    "    for transcript in human_db.features_of_type(\"transcript\"):\n",
-    "        chrom = transcript.chrom\n",
-    "        if chrom not in transcript_counts:\n",
-    "            transcript_counts[chrom] = 0\n",
-    "        transcript_counts[chrom] += 1\n",
-    "    return max(transcript_counts, key=transcript_counts.get)\n",
-    "%timeit transcript_counts_gff = transcript_counts_gffutls()"
+    "# # Using gffutils\n",
+    "# def transcript_counts_gffutls():\n",
+    "#     # Dictionary to store the number of transcripts per chromosome\n",
+    "#     transcript_counts = {}\n",
+    "#     # Iterate over all transcripts and count the number of transcripts per chromosome\n",
+    "#     for transcript in human_db.features_of_type(\"transcript\"):\n",
+    "#         chrom = transcript.chrom\n",
+    "#         if chrom not in transcript_counts:\n",
+    "#             transcript_counts[chrom] = 0\n",
+    "#         transcript_counts[chrom] += 1\n",
+    "#     return max(transcript_counts, key=transcript_counts.get)\n",
+    "# %timeit transcript_counts_gff = transcript_counts_gffutls()"
    ]
   },
   {
@@ -300,6 +370,18 @@
    "source": [
     "# using sql\n",
     "%timeit transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = 'transcript' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# verify if transcript_counts_pr and transcript_counts_sql are identical\n",
+    "transcript_counts_pr = human_gr[human_gr.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()\n",
+    "transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = 'transcript' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)\n",
+    "transcript_counts_pr == transcript_counts_sql[\"Chromosome\"].values[0]"
    ]
   },
   {
@@ -335,15 +417,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# using gffutils TODO: run\n",
-    "def exon_intervals_gffutls():\n",
-    "    exon_intervals = [\n",
-    "        gffutils.helpers.asinterval(exon) for exon in human_db.features_of_type(\"exon\")\n",
-    "    ]\n",
-    "    exon_intervals_sorted = sorted(exon_intervals, key=lambda x: (x.chrom, x.start))\n",
-    "    # Use pybedtools to merge overlapping intervals\n",
-    "    return pybedtools.BedTool(exon_intervals_sorted).merge()\n",
-    "%timeit exon_intervals_gff = exon_intervals_gffutls()"
+    "# # using gffutils TODO: run\n",
+    "# def exon_intervals_gffutls():\n",
+    "#     exon_intervals = [\n",
+    "#         gffutils.helpers.asinterval(exon) for exon in human_db.features_of_type(\"exon\")\n",
+    "#     ]\n",
+    "#     exon_intervals_sorted = sorted(exon_intervals, key=lambda x: (x.chrom, x.start))\n",
+    "#     # Use pybedtools to merge overlapping intervals\n",
+    "#     return pybedtools.BedTool(exon_intervals_sorted).merge()\n",
+    "# %timeit exon_intervals_gff = exon_intervals_gffutls()"
    ]
   },
   {
@@ -360,11 +442,11 @@
     }
    ],
    "source": [
-    "# using sql\n",
-    "def find_exon_intervals_sql():\n",
-    "    exon_intervals = pd.read_sql_query(\"SELECT Chromosome, Start, End FROM human WHERE Feature = 'exon' ORDER BY Chromosome, Start\", conn)\n",
-    "    return pybedtools.BedTool.from_dataframe(exon_intervals).merge()\n",
-    "%timeit exon_intervals_sql = find_exon_intervals_sql()"
+    "# # using sql\n",
+    "# def find_exon_intervals_sql():\n",
+    "#     exon_intervals = pd.read_sql_query(\"SELECT Chromosome, Start, End FROM human WHERE Feature = 'exon' ORDER BY Chromosome, Start\", conn)\n",
+    "#     return pybedtools.BedTool.from_dataframe(exon_intervals).merge()\n",
+    "# %timeit exon_intervals_sql = find_exon_intervals_sql()"
    ]
   },
   {
@@ -407,16 +489,16 @@
     }
    ],
    "source": [
-    "# using gffutils TODO: run\n",
-    "def overlapping_genes_gffutls():\n",
-    "    exon_intervals_overlapping = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}))\n",
-    "    exon_intervals = [\n",
-    "        gffutils.helpers.asinterval(exon) for exon in human_db.features_of_type(\"exon\")\n",
-    "    ]\n",
-    "    exon_intervals_sorted = sorted(exon_intervals, key=lambda x: (x.chrom, x.start))\n",
-    "    # Use pybedtools to merge overlapping intervals\n",
-    "    return exon_intervals_overlapping.window(pybedtools.BedTool(exon_intervals_sorted).merge(), w=0)\n",
-    "%timeit overlapping_genes_gff = overlapping_genes_gffutls()"
+    "# # using gffutils TODO: run\n",
+    "# def overlapping_genes_gffutls():\n",
+    "#     exon_intervals_overlapping = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}))\n",
+    "#     exon_intervals = [\n",
+    "#         gffutils.helpers.asinterval(exon) for exon in human_db.features_of_type(\"exon\")\n",
+    "#     ]\n",
+    "#     exon_intervals_sorted = sorted(exon_intervals, key=lambda x: (x.chrom, x.start))\n",
+    "#     # Use pybedtools to merge overlapping intervals\n",
+    "#     return exon_intervals_overlapping.window(pybedtools.BedTool(exon_intervals_sorted).merge(), w=0)\n",
+    "# %timeit overlapping_genes_gff = overlapping_genes_gffutls()"
    ]
   },
   {
@@ -433,12 +515,12 @@
     }
    ],
    "source": [
-    "# using sql\n",
-    "def find_overlapping_genes_sql():\n",
-    "    exon_intervals_overlapping = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}))\n",
-    "    exon_intervals = pd.read_sql_query(\"SELECT Chromosome, Start, End FROM human WHERE Feature = 'exon' ORDER BY Chromosome, Start\", conn)\n",
-    "    return exon_intervals_overlapping.window(pybedtools.BedTool.from_dataframe(exon_intervals).merge(), w=0)\n",
-    "%timeit overlapping_genes_sql = find_overlapping_genes_sql()"
+    "# # using sql\n",
+    "# def find_overlapping_genes_sql():\n",
+    "#     exon_intervals_overlapping = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}))\n",
+    "#     exon_intervals = pd.read_sql_query(\"SELECT Chromosome, Start, End FROM human WHERE Feature = 'exon' ORDER BY Chromosome, Start\", conn)\n",
+    "#     return exon_intervals_overlapping.window(pybedtools.BedTool.from_dataframe(exon_intervals).merge(), w=0)\n",
+    "# %timeit overlapping_genes_sql = find_overlapping_genes_sql()"
    ]
   },
   {
@@ -465,8 +547,8 @@
     }
    ],
    "source": [
-    "# Using pyranges\n",
-    "%timeit subtracted_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=False).subtract(pr.from_dict({\"Chromosome\": [\"1\", \"1\"],\"Start\": [15000000, 20000000],\"End\": [16000000, 21000000],}))"
+    "# # Using pyranges\n",
+    "# %timeit subtracted_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=False).subtract(pr.from_dict({\"Chromosome\": [\"1\", \"1\"],\"Start\": [15000000, 20000000],\"End\": [16000000, 21000000],}))"
    ]
   },
   {
@@ -483,16 +565,16 @@
     }
    ],
    "source": [
-    "# using gffutils TODO: run\n",
-    "def subtracted_intervals_gffutls():\n",
-    "    exon_intervals_subtract = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\", \"1\"], \"Start\": [15000000, 20000000], \"End\": [16000000, 21000000]}))\n",
-    "    exon_intervals = [\n",
-    "        gffutils.helpers.asinterval(exon) for exon in human_db.features_of_type(\"exon\")\n",
-    "    ]\n",
-    "    exon_intervals_sorted = sorted(exon_intervals, key=lambda x: (x.chrom, x.start))\n",
-    "    # Use pybedtools to merge overlapping intervals\n",
-    "    return pybedtools.BedTool(exon_intervals_sorted).merge().subtract(exon_intervals_subtract)\n",
-    "%timeit overlapping_genes_gff = overlapping_genes_gffutls()"
+    "# # using gffutils TODO: run\n",
+    "# def subtracted_intervals_gffutls():\n",
+    "#     exon_intervals_subtract = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\", \"1\"], \"Start\": [15000000, 20000000], \"End\": [16000000, 21000000]}))\n",
+    "#     exon_intervals = [\n",
+    "#         gffutils.helpers.asinterval(exon) for exon in human_db.features_of_type(\"exon\")\n",
+    "#     ]\n",
+    "#     exon_intervals_sorted = sorted(exon_intervals, key=lambda x: (x.chrom, x.start))\n",
+    "#     # Use pybedtools to merge overlapping intervals\n",
+    "#     return pybedtools.BedTool(exon_intervals_sorted).merge().subtract(exon_intervals_subtract)\n",
+    "# %timeit overlapping_genes_gff = overlapping_genes_gffutls()"
    ]
   },
   {
@@ -509,13 +591,13 @@
     }
    ],
    "source": [
-    "# using sql\n",
-    "def find_subtracted_intervals_sql():\n",
-    "    exon_intervals_subtract = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\", \"1\"], \"Start\": [15000000, 20000000], \"End\": [16000000, 21000000]}))\n",
-    "    exon_intervals = pd.read_sql_query(\"SELECT Chromosome, Start, End FROM human WHERE Feature = 'exon' ORDER BY Chromosome, Start\", conn)\n",
-    "    # Use pybedtools to merge overlapping intervals\n",
-    "    return pybedtools.BedTool.from_dataframe(exon_intervals).merge().subtract(exon_intervals_subtract)\n",
-    "%timeit subtracted_intervals_sql = find_subtracted_intervals_sql()"
+    "# # using sql\n",
+    "# def find_subtracted_intervals_sql():\n",
+    "#     exon_intervals_subtract = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\", \"1\"], \"Start\": [15000000, 20000000], \"End\": [16000000, 21000000]}))\n",
+    "#     exon_intervals = pd.read_sql_query(\"SELECT Chromosome, Start, End FROM human WHERE Feature = 'exon' ORDER BY Chromosome, Start\", conn)\n",
+    "#     # Use pybedtools to merge overlapping intervals\n",
+    "#     return pybedtools.BedTool.from_dataframe(exon_intervals).merge().subtract(exon_intervals_subtract)\n",
+    "# %timeit subtracted_intervals_sql = find_subtracted_intervals_sql()"
    ]
   },
   {
@@ -542,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
